--- a/signal_separator.ipynb
+++ b/signal_separator.ipynb
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "DATA = Path('Data/Recordings_1')\n",
+    "DATA = Path('../Data/Recordings_1')\n",
     "files = ('Galaxy_S8_20190614112028','Mi_A2_20190614110933','Redmi_note_20190614110921')\n",
     "layout_sources = ('Recordings_layout_marked.jpg', 'Recordings_layout.jpg')\n",
     "\n",
@@ -146,7 +146,7 @@
     "# read audio files\n",
     "signals = {}\n",
     "for file in files:\n",
-    "    nm = file[:-15]\n",
+    "    nm = file #[:-15]\n",
     "    y, sr = librosa.load(DATA/(file+'.wav'))\n",
     "    tempo, beat_frames = librosa.beat.beat_track(y=y, sr=sr)\n",
     "    signals[nm] = {'y':y, 'sr':sr, 'tempo':tempo, 'beat_frames':beat_frames}\n",
