--- a/signal_separator-Copy1.ipynb
+++ b/signal_separator-Copy1.ipynb
@@ -108,6 +108,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Audio sources (red) and recorders (green) are marked below.\n",
+    "\n",
+    "Note that the two speakers from the right correspond to a single source, and that the recorder in the right is missing in the image, since it's the same device used to take the photo :)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -223,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if INLINE_PLAYER:\n",
@@ -236,7 +247,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if INLINE_PLAYER:\n",
@@ -249,7 +262,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if INLINE_PLAYER:\n",
@@ -535,7 +550,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "player = ipd.Audio(str(DATA/f'Comp_{0:d}.wav')) if INLINE_PLAYER else None\n",
@@ -545,7 +562,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "player = ipd.Audio(str(DATA/f'Comp_{1:d}.wav')) if INLINE_PLAYER else None\n",
@@ -555,7 +574,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "player = ipd.Audio(str(DATA/f'Comp_{2:d}.wav')) if INLINE_PLAYER else None\n",
